cmake_minimum_required(VERSION 3.0)
project(Algorithms)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(BubbleSort BubbleSort.cpp Utils.inl  )
add_executable(BubbleSort1 BubbleSort1.cpp Utils.inl  )
add_executable(BubbleSort2 BubbleSort2.cpp Utils.inl  )
add_executable(BubbleSort3 BubbleSort3.cpp Utils.inl  )
add_executable(BubbleSort4 BubbleSort4.cpp Utils.inl  )
add_executable(BubbleSort5 BubbleSort5.cpp Utils.inl  )